--- a/app/templates/request_detail.html
+++ b/app/templates/request_detail.html
@@ -165,7 +165,7 @@
                             <td colspan="3">{{compute.compute_product.name}}</td>
                         </tr>
                         <tr>
-                            <th width="30%">Instances</th>
+                            <th width="30%">Virtual Machine Instances</th>
                             <td width="30%">{{compute.instances}}</td>
                             <td width="40%">{{compute.approved_instances}}</td>
                         </tr>
