--- a/app/templates/approve_request_form.html
+++ b/app/templates/approve_request_form.html
@@ -17,12 +17,12 @@
 <form name="approve_form" ng-submit="vm.approve_alloc()" novalidate>
 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
             <label for="id-project_identifier">
                 Project Identifier <i class="glyphicon glyphicon-asterisk text-primary"></i>
             </label>
 
-       <span ng-controller="PopupController">
+            <span ng-controller="PopupController">
             <span ng-click="showHelp()" class="help-icon-sp"><img class="help-icon" src="images/help.png"></span>
             <modal title="{{ help.project_identifier.title }}" visible="showModal">
                 <span ng-bind-html="help.project_identifier.text"></span>
@@ -37,12 +37,12 @@
     </div>
 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
             <label for="id-project_description">
                 Project Allocation Title <i class="glyphicon glyphicon-asterisk text-primary"></i>
             </label>
 
-       <span ng-controller="PopupController">
+            <span ng-controller="PopupController">
             <span ng-click="showHelp()" class="help-icon-sp"><img class="help-icon" src="images/help.png"></span>
             <modal title="{{ help.project_description.title }}" visible="showModal">
                 <span ng-bind-html="help.project_description.text"></span>
@@ -59,7 +59,7 @@
 
     <div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-5">
                 <table>
                     <tr>
                         <td>
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <div class="sub_title">
                     <span class="sub_title"><i class="fa fa-desktop"></i> Compute Resources </span>
                 </div>
@@ -113,10 +113,12 @@
                             <td>
                                 <table class="data_tab">
                                     <tr>
-                                        <td colspan="3">{{vm.alloc.requests[0].compute_requests[0].compute_product.name}}</td>
+                                        <td colspan="3">
+                                            {{vm.alloc.requests[0].compute_requests[0].compute_product.name}}
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <th width="30%">Instances</th>
+                                        <th width="30%">Virtual Machine Instances</th>
                                         <td width="30%">{{vm.alloc.requests[0].compute_requests[0].instances}}</td>
                                         <td width="40%">
                                             <input type="text" class="form-control" id="approved_instances"
@@ -128,7 +130,8 @@
                                         <td>{{vm.alloc.requests[0].compute_requests[0].cores}}</td>
                                         <td>
                                             <input type="text" class="form-control" id="approved_cores"
-                                                   ng-model="vm.alloc.requests[0].compute_requests[0].approved_cores"  ng-change="vm.update_core_hours()" required/>
+                                                   ng-model="vm.alloc.requests[0].compute_requests[0].approved_cores"
+                                                   ng-change="vm.update_core_hours()" required/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -136,7 +139,7 @@
                                         <td>{{vm.alloc.requests[0].compute_requests[0].core_hours}}</td>
                                         <td>
                                             <input type="text" class="form-control" id="approved_core_hours"
-                                                   ng-model="vm.alloc.requests[0].compute_requests[0].approved_core_hours" />
+                                                   ng-model="vm.alloc.requests[0].compute_requests[0].approved_core_hours"/>
                                         </td>
                                     </tr>
                                 </table>
@@ -147,7 +150,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <div class="sub_title">
                     <span class="sub_title"><i class="fa fa-database"></i> Storage Resources </span>
                 </div>
@@ -186,11 +189,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <label for="id-approval_notes">
                     Comment
                 </label>
-            <span ng-controller="PopupController">
+                <span ng-controller="PopupController">
                 <span ng-click="showHelp()" class="help-icon-sp"><img class="help-icon" src="images/help.png"></span>
                 <modal title="{{ help.approve_comment.title }}" visible="showModal">
                     <span ng-bind-html="help.approve_comment.text"></span>
@@ -200,13 +203,13 @@
                 <div class="form-group">
                 <textarea name="approval_notes" id="id-approval_notes"
                           ng-model="vm.alloc.requests[0].approval_notes" class="form-control"
-                          rows="5" style="height:120px; width:395px"></textarea>
+                          rows="5" style="height:120px; width:450px"></textarea>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-6">
             <div>
                 <button type="submit" class="btn bg-primary">Submit</button>
             </div>
