--- a/app/templates/crams_login.html
+++ b/app/templates/crams_login.html
@@ -1,6 +1,6 @@
-<div ng-include="'templates/site_header.html'"></div>
 <div class="main-container">
-    <div ng-controller="NavController" ng-include="'templates/nav_title_bar.html'" ng-class="{ active: isCurrentPath('/login') }"></div>
+    <div ng-controller="NavController" ng-include="'templates/nav_title_bar.html'"
+         ng-class="{ active: isCurrentPath('/login') }"></div>
     <div style="clear:both"></div>
     <div class="display-body">
         <div ng-include="'templates/error_display.html'"></div>
@@ -23,7 +23,7 @@
                                 <label for="id_userName" class="col-sm-3 control-label">User Name</label>
 
                                 <div class="col-md-6">
-                                    <input class="form-control" type="text" name="username"  id="id_userName"
+                                    <input class="form-control" type="text" name="username" id="id_userName"
                                            ng-model="loginCtr.user.username" required/>
                                 </div>
                             </div>
@@ -42,7 +42,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-10">
-                                    <button class="btn btn-primary">Login</button>
+                                    <input class="btn bg-primary" type="submit" value="Log in">
                                 </div>
                             </div>
                         </form>
