--- a/app/templates/nectar_request.html
+++ b/app/templates/nectar_request.html
@@ -6,12 +6,12 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    This form allows you to request a project specific allocation on the research cloud.
+                    This form allows you to request a project specific allocation on the Research Cloud.
                 </p>
 
                 <p>
-                    Allocations take up to 2 to 3 weeks to process. If you have any questions please email
-                    allocations@nectar.org.au
+                    Allocations take up to 3 weeks to process. If you have any questions please email
+                    <a href="mailto:support@nectar.org.au">support@nectar.org.au</a>
                 </p>
 
                 <p>
