--- a/app/templates/project_support.html
+++ b/app/templates/project_support.html
@@ -11,15 +11,15 @@
             </modal>
         </span>
 
-        <div class="form-group medium_width">
-            <input name="nectar_support" id="id-nectar_support" class="form-control"
-                   ng-model="vm.alloc.project_question_responses[1].question_response" />
+        <div class="form-group">
+            <input name="nectar_support" id="id-nectar_support" class="form-control" style="max-width:455px;"
+                   ng-model="vm.alloc.project_question_responses[1].question_response"/>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-4">
         <label for="id-ncris_support">
             List NCRIS capabilities supporting this request
         </label>
@@ -31,9 +31,9 @@
             </modal>
         </span>
 
-        <div class="form-group medium_width">
+        <div class="form-group">
             <input name="ncris_support" id="id-ncris_support" class="form-control"
-                   ng-model="vm.alloc.project_question_responses[2].question_response" />
+                   ng-model="vm.alloc.project_question_responses[2].question_response"/>
         </div>
     </div>
 </div>
