--- a/app/templates/error_display.html
+++ b/app/templates/error_display.html
@@ -1,4 +1,6 @@
-<div class="col-md-12">
-    <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }"
-         ng-if="flash" ng-bind="flash.message"></div>
+<div class="row">
+    <div class="col-md-12">
+        <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }"
+             ng-if="flash" ng-bind="flash.message"></div>
+    </div>
 </div>
