fixed storage product negative value input bug
Change-Id: Ifbf876cfdf84081215d53b681cc2d0ed4e36d79c

--- a/app/templates/storage_product_form.html
+++ b/app/templates/storage_product_form.html
@@ -97,7 +97,7 @@
 
                         <div class="form-group"
                              ng-class="{'has-error':storageForm.nectar_sp_quota.$dirty && storageForm.nectar_sp_quota.$invalid}">
-                            <input type="number" name="nectar_sp_quota" id="id-nectar_sp_quota"
+                            <input type="number" min="0" name="nectar_sp_quota" id="id-nectar_sp_quota"
                                    class="form-control" ng-model="storage_request.quota" style="float:left;width: 84%"/>
                             <span class="input-group-btn">
                                 <button type="button" class="btn">GB</button>
